# companyAI

./: .gitignore  Dockerfile  LICENSE  README.md  README_EN.md  dev_plan.md  docker-compose.yml  future_features.md  guidelines.md  handover_report.md  main.py  pyproject.toml  requirements.txt  tmp.txt  visualize_graph.py
account/: urls.py  views.py
account/templates/account/: login.html  signup.html
ai_core/: llm_gateway.py  workflow.py
ai_core/tools/: comm_tools.py  kms_tools.py  math_tools.py  org_tools.py  registry.py  system_tools.py  web_search.py
corp/: admin.py  agent_workflow.py  memory_manager.py  models.py  ollama_client.py  urls.py  views.py
corp/management/commands/: run_agents.py
corp/migrations/: 0001_initial.py  0001_setup_vector_extension.py  0002_agent_context_window_size_agent_ollama_model_name_and_more.py  0002_initial.py  0003_agent_allowed_tools.py  0003_tasklog.py  0004_alter_task_status.py  0005_corporatememory.py  0006_announcement_channel_channelmessage.py  0007_agent_can_fire_agent_can_hire_agent_depth.py  0008_alter_task_status.py
corp/services/: agent_service.py  comm_service.py  human_service.py  kms_service.py
corp/templates/corp/: agent_detail.html  base.html  dashboard.html  monitor.html  wiki_detail.html  wiki_list.html
corp/templates/corp/partials/: agent_list.html  monitor_list.html  ollama_pull_status.html  question_list.html  roadmap_list.html  task_creation_success.html  task_list.html
source/: urls.py
source/settings/: __init__.py
static/css/: style.css
templates/: base.html
