[project]
name = "company"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asgiref==3.11.0",
    "beautifulsoup4>=4.14.3",
    "ddgs>=9.9.3",
    "django==6.0",
    "django-htmx>=1.27.0",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.1",
    "langgraph>=1.0.4",
    "pgvector==0.4.2",
    "psycopg2-binary==2.9.9",
    "python-dotenv==1.2.1",
    "requests>=2.32.5",
    "sqlparse==0.5.4",
    "sympy>=1.14.0",
]
